fix: layout shift (por causa das bordas)

--- a/styles/fields/droparea.css
+++ b/styles/fields/droparea.css
@@ -1,5 +1,6 @@
 .dropzone {
-    border: 1px dashed var(--stroke-default);
+    border: 2px dashed transparent;
+    outline: 1px dashed var(--stroke-default);
     border-radius: .25rem;
     
     display: grid;
@@ -30,6 +31,7 @@
     }
 
     &:hover, &:has(input:focus){
+        outline-width: 0;
         border: 2px dashed var(--stroke-hightlight);
         background-color: var(--surface-secondary);
 
